frontend/src/public/components/Sidebar/SubMenuItemTooltip.css
.sub-menu {
  width: 21.2rem;
  max-width: 21.2rem;
  font-family: Nunito, sans-serif;
  border-radius: 2.4rem;

  :global(.tippy-content) {
    padding: 0;
  }

  &:global(.tippy-box)[data-placement^='right'] > :global(.tippy-svg-arrow) {
    left: -0.8rem;
    width: 0.8rem;
    height: 2.4rem;

    > * {
      width: 2.4rem;
      height: 0.8rem;
    }
  }
}

.sub-menu__inner {
  padding: 0;

  ul {
    margin: 0;
    padding: 3.2rem;
    list-style: none;
    font-size: 1.5rem;
    text-align: left;
    border-radius: 2.4rem;
  }

  li {
    font-weight: bold;
    white-space: nowrap;
  }

  li + li {
    margin-top: 1.6rem;
  }
}

.plan-trial {
  background-color: var(--sidebar-bg-trial);

  :global(.tippy-svg-arrow) path {
    fill: var(--sidebar-bg-trial);
  }

  ul {
    background-color: var(--sidebar-bg-trial);
  }

  & :global(.tippy-content) .sub-menu__link {
    color: var(--sidebar-color-trial);

    &:hover {
      color: var(--sidebar-color-hover-trial);
    }
  }
}

.plan-premium {
  background-color: var(--sidebar-bg-premium);

  :global(.tippy-svg-arrow) path {
    fill: var(--sidebar-bg-premium);
  }

  ul {
    background-color: var(--sidebar-bg-premium);
  }

  & :global(.tippy-content) .sub-menu__link {
    color: var(--sidebar-color-premium);

    &:hover {
      color: var(--sidebar-color-hover-premium);
    }
  }
}

